+Reorganized all pugs +Added ContactForm +Added Projects (Bugged)

--- a/public/libs/mobirise/css/mbr-additional.css
+++ b/public/libs/mobirise/css/mbr-additional.css
@@ -1372,43 +1372,306 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-qTla8OBnjy {
+.cid-qVNdZ4j9cx {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qVNdZ4j9cx .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-qVNdZ4j9cx .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qVNdZ4j9cx .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qVNdZ4j9cx .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qVNdZ4j9cx .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-qVNdZ4j9cx .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-qVNdZ4j9cx .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-qVNdZ4j9cx .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-qVNdZ4j9cx .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-qVNcrLXxv0 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-qVNcrLXxv0 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-qVNcrLXxv0 .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-qVNcrLXxv0 .mbr-text {
+  color: #767676;
+}
+.cid-qVJNzLOlYp {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-qVJNzLOlYp h2 {
+  text-align: left;
+}
+.cid-qVJNzLOlYp h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-qVJNzLOlYp p {
+  color: #767676;
+  text-align: left;
+}
+.cid-qVJNzLOlYp .aside-content {
+  flex-basis: 100%;
+}
+.cid-qVJNzLOlYp .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-qVJNzLOlYp .media {
+  margin: initial;
+  align-items: center;
+}
+.cid-qVJNzLOlYp .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-qVJNzLOlYp .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-qVJNzLOlYp .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-qVJNzLOlYp .mbr-figure {
+    padding-right: 4rem;
+    padding-right: 0;
+    padding-left: 4rem;
+  }
+  .cid-qVJNzLOlYp .media-container-row {
+    -webkit-flex-direction: row-reverse;
+  }
+}
+@media (max-width: 991px) {
+  .cid-qVJNzLOlYp .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    padding-top: 1rem;
+    margin-top: 2rem;
+  }
+  .cid-qVJNzLOlYp .media-container-row {
+    -webkit-flex-direction: column-reverse;
+  }
+}
+@media (max-width: 300px) {
+  .cid-qVJNzLOlYp .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-qVNcW1BTN5 {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
-.cid-qTla8OBnjy .card-box {
+.cid-qVNcW1BTN5 .card-box {
   padding: 0 2rem;
 }
-.cid-qTla8OBnjy .mbr-section-btn {
+.cid-qVNcW1BTN5 .mbr-section-btn {
   padding-top: 1rem;
 }
-.cid-qTla8OBnjy .mbr-section-btn a {
+.cid-qVNcW1BTN5 .mbr-section-btn a {
   margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-qTla8OBnjy h4 {
+.cid-qVNcW1BTN5 h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
   padding-top: 2rem;
 }
-.cid-qTla8OBnjy p {
+.cid-qVNcW1BTN5 p {
   margin-bottom: 0;
   text-align: left;
   padding-top: 1.5rem;
 }
-.cid-qTla8OBnjy .mbr-text {
+.cid-qVNcW1BTN5 .mbr-text {
   color: #767676;
 }
-.cid-qTla8OBnjy .card-wrapper {
+.cid-qVNcW1BTN5 .card-wrapper {
   height: 100%;
   padding-bottom: 2rem;
   background: #ffffff;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
-.cid-qTla8OBnjy .card-wrapper:hover {
+.cid-qVNcW1BTN5 .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-qVNd33uVo1 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qVNd33uVo1 .title {
+  margin-bottom: 2rem;
+}
+.cid-qVNd33uVo1 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qVNd33uVo1 a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-qVNd33uVo1 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-qVNd33uVo1 .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-qVNd33uVo1 .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-qVNcwePqYz {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-qVNcwePqYz .content {
+    text-align: center;
+  }
+  .cid-qVNcwePqYz .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-qVNcwePqYz .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-qVNcwePqYz .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-qVNcwePqYz .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-qVNcwePqYz .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qVNcwePqYz .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-qVNcwePqYz .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qVNcwePqYz .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qVNcwePqYz .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qVNcwePqYz .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qVNcwePqYz .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-qVNcwePqYz .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-qVNcwePqYz .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-qVNcwePqYz .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-qVNcwePqYz .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
