--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,82 +1,69 @@
-block content
-doctype html
-html
-    head
-           meta(http-equiv='X-UA-Compatible', content='IE=edge')
-           meta(name='generator', content='Mobirise v4.7.6, mobirise.com')
-           meta(name='viewport', content='width=device-width, initial-scale=1, minimum-scale=1')
-           link(rel='shortcut icon', href='images/logo4.png', type='image/x-icon')
-           meta(name='description', content='')
-           title Home
-           link(rel='stylesheet', href='libs/web/assets/mobirise-icons/mobirise-icons.css')
-           link(rel='stylesheet', href='libs/tether/tether.min.css')
-           link(rel='stylesheet', href='libs/bootstrap/css/bootstrap.min.css')
-           link(rel='stylesheet', href='libs/bootstrap/css/bootstrap-grid.min.css')
-           link(rel='stylesheet', href='libs/bootstrap/css/bootstrap-reboot.min.css')
-           link(rel='stylesheet', href='libs/socicon/css/styles.css')
-           link(rel='stylesheet', href='libs/theme/css/style.css')
-           link(rel='stylesheet', href='libs/gallery/style.css')
-           link(rel='stylesheet', href='libs/mobirise/css/mbr-additional.css', type='text/css')
-
-           link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
-    section#footer1-5.cid-qTJBo6eyFr.mbr-reveal
-        .mbr-overlay(style='background-color: rgb(60, 60, 60); opacity: 0.5;')
-        .container
-            .media-container-row.content.text-white(style='margin-top: 20px')
-                .col-12.col-md-3
-                    .media-wrap
-                        img(src='images/logo4.png', alt='Mobirise')
-                .col-12.col-md-3.mbr-fonts-style.display-7
-                    h5.pb-3
-                        | Address
-                    p.mbr-text
-                        | 1234 Street Name
-                        br
-                        | City, AA 99999
-                .col-12.col-md-3.mbr-fonts-style.display-7
-                    h5.pb-3
-                        | Contacts
-                    p.mbr-text
-                        | Email: support@mobirise.com
-                        br
-                        | Phone: +1 (0) 000 0000 001
-                        br
-                        | Fax: +1 (0) 000 0000 002
-                .col-12.col-md-3.mbr-fonts-style.display-7
-                    h5.pb-3
-                        | Links
-                    p.mbr-text
-                        a.text-primary(href='https://mobirise.com/') Website builder
-                        br
-                        a.text-primary(href='https://mobirise.com/mobirise-free-win.zip') Download for Windows
-                        br
-                        a.text-primary(href='https://mobirise.com/mobirise-free-mac.zip') Download for Mac
-            .footer-lower
-                .media-container-row
-                    .col-sm-12
-                        hr
-                .media-container-row.mbr-white
-                    .col-sm-6.copyright
-                        p.mbr-text.mbr-fonts-style.display-7
-                            | © Copyright 2017 Mobirise - All Rights Reserved
-                    .col-md-6
-                        .social-list.align-right
-                            a.socicon-twitter.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
-                            a.socicon-facebook.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
-                            a.socicon-youtube.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
-                            a.socicon-instagram.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
-                            a.socicon-googleplus.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
-        script(src='libs/web/assets/jquery/jquery.min.js')
-        script(src='libs/popper/popper.min.js')
-        script(src='libs/tether/tether.min.js')
-        script(src='libs/bootstrap/js/bootstrap.min.js')
-        script(src='libs/smoothscroll/smooth-scroll.js')
-        script(src='libs/masonry/masonry.pkgd.min.js')
-        script(src='libs/imagesloaded/imagesloaded.pkgd.min.js')
-        script(src='libs/mbr-switch-arrow/mbr-switch-arrow.js')
-        script(src='libs/vimeoplayer/jquery.mb.vimeo_player.js')
-        script(src='libs/bootstrapcarouselswipe/bootstrap-carousel-swipe.js')
-        script(src='libs/theme/js/script.js')
-        script(src='libs/slidervideo/script.js')
-        script(src='libs/gallery/player.min.js')
-        script(src='libs/gallery/script.js')
+section#footer2-12.cid-qVNcwePqYz
+    .container
+        .media-container-row.content.mbr-white
+            .col-12.col-md-3.mbr-fonts-style.display-7
+                p.mbr-text
+                    strong Address
+                    br
+                    br
+                    | 1234 Street Name
+                    br
+                    | City, AA 99999
+                    br
+                    br
+                    br
+                    strong Contacts
+                    br
+                    br
+                    | Email: support@mobirise.com
+                    br
+                    | Phone: +1 (0) 000 0000 001
+                    br
+                    | Fax: +1 (0) 000 0000 002
+            .col-12.col-md-3.mbr-fonts-style.display-7
+                p.mbr-text
+                    strong Links
+                    br
+                    br
+                    a.text-primary(href='https://mobirise.com/') Website builder
+                    br
+                    a.text-primary(href='https://mobirise.com/mobirise-free-win.zip') Download for Windows
+                    br
+                    a.text-primary(href='https: //mobirise.com/mobirise-free-mac.zip') Download for Mac
+                    br
+                    br
+                    strong Feedback
+                    br
+                    br
+                    | Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated.
+            .col-12.col-md-6
+                .google-map
+                    iframe(frameborder='0', style='border:0', src='https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw', allowfullscreen='')
+        .footer-lower
+            .media-container-row
+                .col-sm-12
+                    hr
+            .media-container-row.mbr-white
+                .col-sm-6.copyright
+                    p.mbr-text.mbr-fonts-style.display-7
+                        | © Copyright 2017 Mobirise - All Rights Reserved
+                .col-md-6
+                    .social-list.align-right
+                        .soc-item
+                            a(href='https://twitter.com/mobirise', target='_blank')
+                                span.socicon-twitter.socicon.mbr-iconfont.mbr-iconfont-social
+                        .soc-item
+                            a(href='https://www.facebook.com/pages/Mobirise/1616226671953247', target='_blank')
+                                span.socicon-facebook.socicon.mbr-iconfont.mbr-iconfont-social
+                        .soc-item
+                            a(href='https://www.youtube.com/c/mobirise', target='_blank')
+                                span.socicon-youtube.socicon.mbr-iconfont.mbr-iconfont-social
+                        .soc-item
+                            a(href='https://instagram.com/mobirise', target='_blank')
+                                span.socicon-instagram.socicon.mbr-iconfont.mbr-iconfont-social
+                        .soc-item
+                            a(href='https://plus.google.com/u/0/+Mobirise', target='_blank')
+                                span.socicon-googleplus.socicon.mbr-iconfont.mbr-iconfont-social
+                        .soc-item
+                            a(href='https://www.behance.net/Mobirise', target='_blank')
+                                span.socicon-behance.socicon.mbr-iconfont.mbr-iconfont-social
