--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,4 +1,3 @@
-
 doctype html
 head
   meta(charset='utf-8')
@@ -7,7 +6,7 @@ head
   meta(name='author' content='')
   title Logo Nav - Start Bootstrap Template
   // Bootstrap core CSS
-  link(href='libs/bootstrap/css/bootstrap.min.css' rel='stylesheet')
+  link(href='libs/bootstrap/css/bootstrap.css' rel='stylesheet')
   // Custom styles for this template
   link(href='stylesheets/logo-nav.css' rel='stylesheet')
 // Navigation
@@ -26,9 +25,9 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top
         li.nav-item
           a.nav-link(href='/blog') Blog
         li.nav-item
-          a.nav-link(href='#') Services
+          a.nav-link(href='/project') Project
         li.nav-item
-          a.nav-link(href='#') Contact
+          a.nav-link(href='/contact') Contact
 
 // Bootstrap core JavaScript
 script(src='libs/jquery/jquery.min.js')
