--- a/views/sideColumn.pug
+++ b/views/sideColumn.pug
@@ -1,3 +1,23 @@
-section#feed-13.mbr-social-feed.loading(data-facebook='mobirise', data-twitter='mobirise', data-google='+mobirise', data-posts='3', data-youtube='UCt_tncVAetpK5JeM8L-8jyw', data-rv-view='17', style='background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;')
-    img.social-feed-container-loading(alt='', src='assets/images/loading.svg')
+div.align-center(style="margin-bottom:20px;")
+    h3
+    | NEWSLETTER
+    form(method="post" action="http://linuxupc.upc.edu/cgi-bin/mailman/subscribe/info")
+        input(type="email" name="email" placeholder="linuxupc@linuxupc.upc.edu" size="21" style="margin-top:10px;margin-bottom:5px;")
+        input(type="submit" name="email-button" value="Subscriu-te!")
+
+
+section.mbr-social-feed.loading(data-twitter='linuxUPC', data-posts='4', data-rv-view='17', style='background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;')
+    img.social-feed-container-loading(alt='', src='images/loading.svg')
     .social-feed-container
+
+
+div.align-center(style="margin:20px;")
+    h3
+    | ENS CONVIDES A UN CAFÈ?
+    br
+    |(づ♥◡♥)づ
+    form(action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="margin:10px;")
+        input(type="hidden" name="cmd" value="_s-xclick")
+        input(type="hidden" name="hosted_button_id" value="4YSQ8RQ3FLCG8")
+        input(type="image" src="https://www.paypalobjects.com/en_US/ES/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!")
+        img(alt="" border="0" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width="1" height="1")
