--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,35 +1,36 @@
 section#footer2-12.cid-qVNcwePqYz
     .container
         .media-container-row.content.mbr-white
-            .col-12.col-md-3.mbr-fonts-style.display-7
-                p.mbr-text
-                    strong Address
+            .col-12.col-md-4.mbr-fonts-style.display-7
+                p.mbr-text.align-center
+                    strong Localització
                     br
                     br
-                    | 1234 Street Name
+                    | Edifici Ω, Soterrani 1, Despatx S-105
                     br
-                    | City, AA 99999
+                    | Carrer de Jordi Girona, 15
                     br
-                    br
-                    br
-                    strong Contacts
+                    | 08034 Barcelona, España
                     br
                     br
-                    | Email: support@mobirise.com
+                    strong Contacte
+                    br
+                    br
+                    | Email: linuxupc@linuxupc.upc.edu
                     br
                     | Phone: +1 (0) 000 0000 001
                     br
                     | Fax: +1 (0) 000 0000 002
             .col-12.col-md-3.mbr-fonts-style.display-7
-                p.mbr-text
+                p.mbr-text.align-center
                     strong Links
                     br
                     br
-                    a.text-primary(href='https://mobirise.com/') Website builder
+                    a.text-primary(href='#') Website builder
                     br
-                    a.text-primary(href='https://mobirise.com/mobirise-free-win.zip') Download for Windows
+                    a.text-primary(href='#') Download for Windows
                     br
-                    a.text-primary(href='https: //mobirise.com/mobirise-free-mac.zip') Download for Mac
+                    a.text-primary(href='#') Download for Mac
                     br
                     br
                     strong Feedback
@@ -46,24 +47,24 @@ section#footer2-12.cid-qVNcwePqYz
             .media-container-row.mbr-white
                 .col-sm-6.copyright
                     p.mbr-text.mbr-fonts-style.display-7
-                        | © Copyright 2017 Mobirise - All Rights Reserved
+                        | © Copyright 2017 Linux UPC. Some Rights Reserved.
                 .col-md-6
                     .social-list.align-right
                         .soc-item
-                            a(href='https://twitter.com/mobirise', target='_blank')
+                            a(href='https://twitter.com/linuxUPC', target='_blank')
                                 span.socicon-twitter.socicon.mbr-iconfont.mbr-iconfont-social
                         .soc-item
-                            a(href='https://www.facebook.com/pages/Mobirise/1616226671953247', target='_blank')
+                            a(href='#', target='_blank')
                                 span.socicon-facebook.socicon.mbr-iconfont.mbr-iconfont-social
                         .soc-item
-                            a(href='https://www.youtube.com/c/mobirise', target='_blank')
+                            a(href='#', target='_blank')
                                 span.socicon-youtube.socicon.mbr-iconfont.mbr-iconfont-social
                         .soc-item
-                            a(href='https://instagram.com/mobirise', target='_blank')
+                            a(href='#', target='_blank')
                                 span.socicon-instagram.socicon.mbr-iconfont.mbr-iconfont-social
                         .soc-item
-                            a(href='https://plus.google.com/u/0/+Mobirise', target='_blank')
+                            a(href='#', target='_blank')
                                 span.socicon-googleplus.socicon.mbr-iconfont.mbr-iconfont-social
                         .soc-item
-                            a(href='https://www.behance.net/Mobirise', target='_blank')
+                            a(href='#', target='_blank')
                                 span.socicon-behance.socicon.mbr-iconfont.mbr-iconfont-social
